--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -8,12 +8,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mytdev</groupId>
     <artifactId>jfx-autocomplete-textfield</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>jar</packaging>
 
     <name>JFXAutoCompleteTextfield</name>
     <description>JFX AutoCompleteTextfield is a simple JavaFX text field control offering autocomplete feature.</description>
-    <url></url>
+    <url />
     <licenses>
         <license>
             <name>Apache License 2.0</name>
@@ -58,4 +58,10 @@
             <systemPath>${javafx.home}/lib/jfxrt.jar</systemPath>
         </dependency>
     </dependencies>
+
+  <scm>
+    <connection>scm:svn:http://svn.sonatype.org/spice/tags/jfx-autocomplete-textfield-0.0.1</connection>
+    <developerConnection>scm:svn:https://svn.sonatype.org/spice/tags/jfx-autocomplete-textfield-0.0.1</developerConnection>
+    <url>http://svn.sonatype.org/spice/tags/jfx-autocomplete-textfield-0.0.1</url>
+  </scm>
 </project>
