--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mytdev</groupId>
     <artifactId>jfx-autocomplete-textfield</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>JFXAutoCompleteTextfield</name>
