--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mytdev</groupId>
     <artifactId>jfx-autocomplete-textfield</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>JFXAutoCompleteTextfield</name>
@@ -21,9 +21,9 @@
         </license>
     </licenses>
      <scm>
-        <url>http://code.google.com/p/jfx-autocomplete-textfield/source/browse/tags/jfx-autocomplete-textfield-0.0.1</url>
-        <connection>scm:svn:https://jfx-autocomplete-textfield.googlecode.com/svn/tags/jfx-autocomplete-textfield-0.0.1</connection>
-        <developerConnection>scm:svn:https://jfx-autocomplete-textfield.googlecode.com/svn/tags/jfx-autocomplete-textfield-0.0.1</developerConnection>
+        <url>http://code.google.com/p/jfx-autocomplete-textfield/source/browse</url>
+        <connection>scm:svn:https://jfx-autocomplete-textfield.googlecode.com/svn/trunk</connection>
+        <developerConnection>scm:svn:https://jfx-autocomplete-textfield.googlecode.com/svn/trunk</developerConnection>
     </scm> 
     <organization>
         <name>myTDev</name>
